<resources>
    <string name="app_name">自分で作る英単語帳</string>
    <string name="start">はじめる</string>
    <string name="back">＜   戻る</string>
    <string name="create">つくる</string>
    <string name="study">勉強する</string>
    <string name="take_picture">写真を取る</string>
    <string name="choose_picture">写真を選ぶ</string>
    <string name="my_create">自分で作る</string>
    <string name="ok">決定</string>
    <string name="japanese">日本語</string>
    <string name="english_word">英単語</string>
    <string name="end">終了</string>
    <string name="file_name">ファイル名を入力</string>
    <string name="folder_name">フォルダ名を入力</string>
    <string name="folder_add">フォルダを追加</string>
    <string name="order_ja_en">日本語⇨英語</string>
    <string name="order_en_ja">英語⇨日本語</string>
    <string name="edit">編集</string>
    <string name="edit_com">編集完了</string>
    <string name="right">⇨</string>
    <string name="left">⇦</string>
    <string name="title">自分で作る</string>
    <string name="title2">英単語帳</string>
    <string name="trancelate">翻訳</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>